# fermi_hubbard_commutators

./: .gitignore  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml
doc/: api.rst  commutator_bounds.ipynb  conf.py  hamiltonian_operators.ipynb  index.rst  lattice_translations.ipynb  splitting_methods.ipynb
doc/_templates/: fh_comm-class-template.rst  fh_comm-module-template.rst
examples/: README.rst  comm_bound_demo.py  fh_comm_1d.py  fh_comm_2d_square.py  fh_comm_2d_triangular.py
fh_comm/: __init__.py  combinatorics.py  comm_bound.py  comm_table.py  commutator.py  field_ops.py  hamiltonian_ops.py  lattice.py  simplification.py  splitting_method.py
test/: test_combinatorics.py  test_comm_table.py  test_commutator.py  test_field_ops.py  test_hamiltonian_ops.py  test_lattice.py  test_simplification.py  test_splitting_method.py
